--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,19 @@ message(STATUS "  (Headers)       ${LIBHDFS3_INCLUDE_DIR}")
 message(STATUS "  (Library)       ${LIBHDFS3_LIBRARY}")
 include_directories(${LIBHDFS3_INCLUDE_DIR})
 
+find_path(ZMQ_INCLUDE_DIR NAMES zmq.hpp)
+find_library(ZMQ_LIBRARY NAMES zmq)
+if(ZMQ_INCLUDE_DIR AND ZMQ_LIBRARY)
+  message(STATUS "Found ZeroMQ:")
+  message(STATUS "  (Headers)       ${ZMQ_INCLUDE_DIR}")
+  message(STATUS "  (Library)       ${ZMQ_LIBRARY}")
+elseif()
+  message(ERROR "ZeroMQ not found")
+endif()
+include_directories(${ZMQ_INCLUDE_DIR})
+include_directories("network/include")
+
+#message(STATUS "111")
 # NGAS
 include_directories(${PROJECT_SOURCE_DIR})
 
@@ -61,6 +74,20 @@ file(GLOB engine-src-files
 add_library(engine-static STATIC ${engine-src-files})
 target_link_libraries(engine-static data-static gflags ${glog_LIBRARY} )
 set_property(TARGET engine-static PROPERTY CXX_STANDARD ${CMAKE_CXX_STANDARD})
+
+# Network files
+FILE(GLOB network-src-files "network/*.cc")
+
+# network-static
+
+add_library(network-static STATIC ${network-src-files})
+target_link_libraries(network-static ${ZMQ_LIBRARY})
+set_property(TARGET network-static PROPERTY CXX_STANDARD ${CMAKE_CXX_STANDARD})
+
+#add_library(network-shared STATIC ${network-src-files})
+#target_link_libraries(network-shared ${ZMQ_LIBRARY})
+#set_property(TARGET network-shared PROPERTY CXX_STANDARD ${CMAKE_CXX_STANDARD})
+
 
 # Test
 include(CTest)
